# cuda-ipc-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile_nvshmem  README.md  ipc_buffered_noaccum  ipc_direct_noaccum  ipc_mpigpu_noaccum  ipc_staged_noaccum  transpose_nsys.nsys-rep
LULESH/: .gitignore  run_lulesh.sbatch  run_lulesh_all_8gpu.sbatch  run_lulesh_modes_8gpu.sbatch  run_lulesh_verify.sbatch
LULESH/cuda/: README.md
LULESH/cuda/src/: Makefile  lulesh-comms-direct.cu  lulesh-comms-gpu.cu  lulesh-comms.cu  lulesh.cu  lulesh.h
LULESH/cuda/src/comm/: comm_backend.h  comm_direct.h  comm_gpumpi.h  comm_ipc.h  comm_ipc_common.h  comm_mpiwrap.h  comm_nvshmem.h  comm_shmwin.h  comm_staged.h
mpi-intercept/: CMakeLists.txt  README.md  bench_ipc.cu  bench_kernels.cu  mpiwrap_ipc.cc  test_ipc_win.cu
plots/: benchmark_dashboard.jsx  make_lulesh_plots.py
results/: stencil_results.txt  transpose_results.md  transpose_results.txt
scripts/: run_nvl72.sh  run_nvshmem_all.sbatch  run_stencil_4gpu.sh  run_stencil_8gpu.sh  run_stencil_benchmark.sh  run_transpose_all.sbatch  run_transpose_ipc_noaccum.sbatch
stencil/: run_4gpu.sh  stencil_gpu_mpi.cu  stencil_ipc.cu  stencil_large_mpi-3.cu  stencil_large_nvshmem.cu  stencil_mpi.cu
transpose/: Makefile  Makefile_nvshmem  buffered  buffered_noaccum  direct  direct_noaccum  direct_single  direct_single_noaccum  gpumpi  gpumpi_noaccum  run_nvshmem.sbatch  run_transpose.sbatch  staged  staged_noaccum  transpose_cuda_ipc_noaccum.cu  transpose_gpu_ipc.cu  transpose_ipc.cu  transpose_mpi_standalone.cu  transpose_nvshmem.cu  transpose_nvshmem_noaccum.cu
